# advent-of-code

./: .gitignore  build.sbt
2021/src/main/scala/: day1.scala  day2.scala  day3.scala  package.scala  utils.scala
2021/src/test/scala/: Test2021.scala  tests.scala
2023/rust/: .envrc  .envrc2  flake.nix
2023/rust/d-01/: Cargo.toml
2023/rust/d-01/src/: main.rs
2023/rust/d-02/: Cargo.toml
2023/rust/d-02/src/: main.rs
2023/rust/d-03/: Cargo.toml
2023/rust/d-03/src/: main.rs
2023/rust/d-04/: Cargo.toml
2023/rust/d-04/src/: main.rs
2025/zig/: .envrc  flake.nix
2025/zig/src/day1/: day1.zig
src/main/scala/: Main.scala  y2021.scala
src/test/scala/: Test2021.scala
